--- a/Docker/Dockerfile
+++ b/Docker/Dockerfile
@@ -14,7 +14,7 @@ RUN apt-get update && apt-get install -y \
 
 RUN wget www.netlib.org/benchmark/linpackjava/LinpackJava.zip && unzip LinpackJava.zip && javac -O ~/Linpack.java
 
-RUN git clone https://github.com/jeffhammond/STREAM.git
+RUN git clone https://github.com/rutu-k/STREAM.git
 
 RUN git clone https://github.com/alexandermerritt/gups.git && cd ~/gups && make -f Makefile.linux gups_vanilla
 
